--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "tsx src/db/migrate.ts",
+    "email": "email dev --dir src/emails "
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.0",
@@ -15,9 +18,11 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@react-email/components": "0.0.33",
     "@tiptap/extension-character-count": "^2.11.5",
     "@tiptap/extension-font-family": "^2.11.5",
     "@tiptap/extension-text-align": "^2.11.5",
@@ -40,6 +45,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
+    "resend": "^4.1.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
@@ -52,7 +58,9 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.24",
     "postcss": "^8",
+    "react-email": "3.0.7",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.3",
     "typescript": "^5"
   }
 }
