style: reuseble card thread and reply

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,15 @@
 BETTER_AUTH_SECRET=
 BETTER_AUTH_URL=http://localhost:3000
 
-DATABASE_CONNECTION_STRING=postgresql://postgres:password@host:port/databaename
+DATABASE_CONNECTION_STRING=postgresql://username:YOUR_PASSWORD@host:port/dbname
 
 RESEND_API_KEY=
 EMAIL_VERIFICATION_CALLBACK_URL=http://localhost:3000/email-verified
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+NEXT_PUBLIC_APP_URL=http://localhost:3000
