--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "resend": "^4.1.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.5.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
