--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@react-email/components": "0.0.33",
     "@tiptap/extension-character-count": "^2.11.5",
+    "@tiptap/extension-dropcursor": "^2.11.5",
     "@tiptap/extension-font-family": "^2.11.5",
+    "@tiptap/extension-image": "^2.11.5",
     "@tiptap/extension-text-align": "^2.11.5",
     "@tiptap/extension-underline": "^2.11.5",
     "@tiptap/extension-youtube": "^2.11.5",
