--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ GOOGLE_CLIENT_SECRET=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 UPLOADTHING_TOKEN=
