style: styling page liked threads

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ DATABASE_CONNECTION_STRING=postgresql://username:YOUR_PASSWORD@host:port/dbname
 
 RESEND_API_KEY=
 EMAIL_VERIFICATION_CALLBACK_URL=http://localhost:3000/email-verified
+EMAIL_FROM=
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
