--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "drizzle-orm": "^0.39.3",
     "isomorphic-dompurify": "^2.21.0",
     "lucide-react": "^0.475.0",
+    "motion": "^12.4.10",
     "next": "14.2.24",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
